# large_project_template

./: .gitignore  CMakeLists.txt  README.md
apps/app1/: CMakeLists.txt
apps/app2/: CMakeLists.txt
cmake/: linux_x64.cmake  windows_x64.cmake
scripts/: linux_build.sh  windows_build.cmd
src/: CMakeLists.txt  a.out  main.cpp
src/module_a/: CMakeLists.txt  MyLib.cpp  MyLib.h
tests/: CMakeLists.txt  test_main.cpp  test_service.cpp
tests/benchmarks/: CMakeLists.txt  benchmark_lib.cpp
